--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "private": true,
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "^1.1.4"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.7",
+    "@fortawesome/fontawesome-free-solid": "^5.0.12",
+    "@fortawesome/react-fontawesome": "0.0.19",
     "axios": "^0.18.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.7",
     "redux": "^3.5.2"
   },
