--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
+    "ajv": "^6.5.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
